--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,3 @@
 <h1>Proyecto de Control de Uso de Laboratorio</h1>
 <button type="button" class="btn btn-warning">Warning</button>
+<app-mostrar-reporte></app-mostrar-reporte>
