Se empieza a configurar La barra de navegación

--- a/src/app/components/nav-bar/nav-bar.component.html
+++ b/src/app/components/nav-bar/nav-bar.component.html
@@ -1,1 +1,8 @@
-<p>nav-bar works!</p>
+<nav class="navbar bg-light">
+    <div class="container-fluid">
+      <a class="navbar-brand">
+        <img [src]="img" alt="Bootstrap" width="30" height="24">
+        Inicio
+    </a>
+    </div>
+  </nav>
