--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,1 @@
-<h1>Proyecto de Control de Uso de Laboratorio</h1>
-<button type="button" class="btn btn-warning">Warning</button>
-<app-mostrar-reporte></app-mostrar-reporte>
+<app-nav-bar></app-nav-bar>
