--- a/src/app/components/mostrar-reporte/mostrar-reporte.component.html
+++ b/src/app/components/mostrar-reporte/mostrar-reporte.component.html
@@ -1,1 +1,36 @@
-<p>mostrar-reporte works!</p>
+<div class="row mt-3">
+    <div class="col-lg-6">
+        <h3>Listados de Uso de Laboratorio</h3>
+    </div>
+</div>
+
+<table *ngIf="listaUsos.length > 0 " class="table table-hover mt-3">
+    <thead>
+        <tr>
+            <td>id</td>
+            <td>CURP</td>
+            <td>Nombre:</td>
+            <td>Fecha De Uso</td>
+            <td>Hora de Entrada</td>
+            <td>Hora de Salida</td>
+            <td></td>
+            <td></td>
+        </tr>
+    </thead>
+    <tbody>
+        <tr *ngFor="let uso of listaUsos">
+            <td>{{uso.id}}</td>
+            <td>MAJE670215sadfasdf</td>
+            <td>Eduardo</td>
+            <td>{{uso.FechaDeUso | date: 'dd/MM/yyyy'}}</td>
+            <td>{{uso.HoraDeEntrada}}</td>
+            <td>{{uso.HoraDeSalida}}</td>
+            <td></td>
+            <td></td>
+        </tr>
+    </tbody>
+</table>
+<div *ngIf="listaUsos.length == 0" class="roe mt-5">
+    <h5>No hay registros de Usos para mostrar</h5>
+</div>
+
