Creando la maquetación del Componente para capturar CURP

--- a/src/app/components/capturar-curp/capturar-curp.component.html
+++ b/src/app/components/capturar-curp/capturar-curp.component.html
@@ -1,1 +1,12 @@
-<p>capturar-curp works!</p>
+<div class="container">
+    <div class="row mt-6">
+        <div class="col-lg-6">
+            <form>
+                <label for="curp">Captura tu CURP</label>
+                <input type="text" id="curp" name="curp">
+                <br>
+                <input type="submit" value="Buscar">
+            </form>
+        </div>
+    </div>
+</div>
